force-app/main/default/objects/Contact/fields/chk_ServiceContact__c.field-meta.xml
<CustomField>
    <fullName>chk_ServiceContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Contact</label>
    <type>Checkbox</type>
</CustomField>