force-app/main/default/objects/Contact/fields/chl_ServiceContact__c.field-meta.xml
<CustomField>
    <fullName>chl_ServiceContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the Support (ETAS/SAS)</description>
    <label>Service Contact</label>
    <type>Checkbox</type>
</CustomField>