force-app/main/default/objects/Contact/fields/dtm_CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>dtm_CreatedOn__c</fullName>
    <description>Date and time when the alert was created</description>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>