force-app/main/default/objects/Contact/fields/mpkl_BoschPartnerRole__c.field-meta.xml
<CustomField>
    <fullName>mpkl_BoschPartnerRole__c</fullName>
    <label>BoschPartnerRole</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBCRCP - Bosch External Contact Person</fullName>
            </value>
            <value>
                <fullName>BUP003 - Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>