force-app/main/default/objects/Contact/fields/mpkl_RoleMainAccount__c.field-meta.xml
<CustomField>
    <fullName>mpkl_RoleMainAccount__c</fullName>
    <label>Role Main Account</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gpkv_ContactRoles</valueSetName>
    </valueSet>
</CustomField>