force-app/main/default/objects/Contact/fields/num_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>num_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>