force-app/main/default/objects/Contact/fields/pkl_AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>pkl_AccountGroup__c</fullName>
    <label>Account Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETDE Contact ETCN Contact</fullName>
            </value>
            <value>
                <fullName>ETJP Contact</fullName>
            </value>
            <value>
                <fullName>ETKR Contact</fullName>
            </value>
            <value>
                <fullName>ETNA - OEM/Fleet Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>