force-app/main/default/objects/Contact/fields/pkl_ContactSource__c.field-meta.xml
<CustomField>
    <fullName>pkl_ContactSource__c</fullName>
    <description>Enables the Sales Coordinator know if it is a lead conversion/contact manually created after an event, etc.</description>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fair Trade</fullName>
            </value>
            <value>
                <fullName>Direct Inquiry (Email)</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Formula Student</fullName>
            </value>
            <value>
                <fullName>Workshops</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>CMD Form</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>