force-app/main/default/objects/Contact/fields/pkl_Status__c.field-meta.xml
<CustomField>
    <fullName>pkl_Status__c</fullName>
    <description>Contact Status in Athena System, describes whether the Person Business Partner is aligned in Athena or Not</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOSCH_PARTNER_NUMBER_NOT_RECEIVED</fullName>
                <label>Bosch Partner Number not Received</label>
            </value>
            <value>
                <fullName>CREATED_IN_ATHENA</fullName>
                <label>Created in Athena</label>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>ERROR_IN_SENDING_TO_ATHENA</fullName>
                <label>Error in sending to Athena</label>
            </value>
            <value>
                <fullName>RECEIVED_IN_ATHENA_FOR_BP_CREATION</fullName>
                <label>Received in Athena for BP creation</label>
            </value>
            <value>
                <fullName>SENT_TO_ATHENA</fullName>
                <label>Sent to Athena</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>