force-app/main/default/objects/Contact/fields/txt_AcademicTitle__c.field-meta.xml
<CustomField>
    <fullName>txt_AcademicTitle__c</fullName>
    <label>Academic title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>