force-app/main/default/objects/Contact/fields/txt_AlertId__c.field-meta.xml
<CustomField>
    <fullName>txt_AlertId__c</fullName>
    <description>Id of the alert, generated in the system that screens the Bosch Partner</description>
    <label>Alert Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>