force-app/main/default/objects/Contact/fields/txt_AlertLifecycle__c.field-meta.xml
<CustomField>
    <fullName>txt_AlertLifecycle__c</fullName>
    <description>The status of the alert lifecycle</description>
    <label>Alert Lifecycle</label>
    <length>2</length>
    <type>Text</type>
</CustomField>