force-app/main/default/objects/Contact/fields/txt_Building__c.field-meta.xml
<CustomField>
    <fullName>txt_Building__c</fullName>
    <label>Building</label>
    <length>50</length>
    <type>Text</type>
</CustomField>