force-app/main/default/objects/Contact/fields/txt_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>txt_ExternalID__c</fullName>
    <description>Automatically assigned by the ERP when saving</description>
    <label>External ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>