force-app/main/default/objects/Contact/fields/txt_Finding__c.field-meta.xml
<CustomField>
    <fullName>txt_Finding__c</fullName>
    <description>The status of the alert completion</description>
    <label>Finding</label>
    <length>2</length>
    <type>Text</type>
</CustomField>