force-app/main/default/objects/Contact/fields/txt_Floor__c.field-meta.xml
<CustomField>
    <fullName>txt_Floor__c</fullName>
    <label>Floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>