force-app/main/default/objects/Contact/fields/txt_LocationDetails__c.field-meta.xml
<CustomField>
    <fullName>txt_LocationDetails__c</fullName>
    <inlineHelpText>Direction to building, floor, room, etc.,</inlineHelpText>
    <label>Location Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>