force-app/main/default/objects/Contact/fields/txt_ReasonForClosingAlert__c.field-meta.xml
<CustomField>
    <fullName>txt_ReasonForClosingAlert__c</fullName>
    <description>The reason for closing the alert</description>
    <label>Reason For Closing Alert</label>
    <length>10</length>
    <type>Text</type>
</CustomField>